# tcg-label-gen

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
src/: cutting_guide.rs  filters.rs  label.rs  label_generator.rs  label_render.rs  main.rs  paper_size.rs
src/css/: font_size.rs  font_weight.rs  length.rs  mod.rs
src/css/elements/: image.rs  text.rs
src/css/properties/: dominant_baseline.rs  font.rs  font_size.rs  font_style.rs  font_weight.rs  length.rs  mod.rs  text_align.rs  text_transform.rs
src/label/: binder_spine.rs  mod.rs  plastic_divider.rs
src/scryfall/: errors.rs  lists.rs  mod.rs  set.rs  sets.rs
src/websafe/: colors.rs
