[package]
name = "tcg_label_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
chrono = "0.4.26"
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde_json = "1.0.99"
derive-getters = "0.3.0"
tera = "1.19.0"
derive_builder = "0.12.0"